# PixSage

./: .gitignore  config.py  install.sh  pyproject.toml
data/: preprocess.py  schema.py
internvl/: conversation.py
internvl/infer/: internvl_chat_infer.py
internvl/model/internlm2/: modeling_internlm2.py
internvl/model/internvl_chat/: configuration_internvl_chat.py  modeling_intern_vit.py  modeling_internvl_chat.py
internvl/model/phi3/: modeling_phi3.py
internvl/patch/: internlm2_packed_training_patch.py  llama_flash_attn_monkey_patch.py  pad_data_collator.py  train_sampler_patch.py
internvl/tools/: merge_weights.py
internvl/train/: dataset.py  dataset_packed.py  internvl_chat_finetune.py  internvl_chat_mpo.py  internvl_chat_pretrain.py
train/: finetune.sh  finetune_stage_1.sh  finetune_stage_2.sh  infer.sh
