[project]
dependencies = [
    "accelerate==1.9.0",
    "aiofiles>=24.1.0",
    "annotated-types==0.7.0",
    "av==15.0.0",
    "bitsandbytes==0.41.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "cmake==4.0.3",
    "datasets>=2.14.4",
    "decord==0.6.0; sys_platform != 'darwin'",
    "deepspeed==0.13.5",
    "dotenv>=0.9.9",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "filelock==3.18.0",
    "flash-attn==2.3.6; sys_platform != 'darwin'",
    "fsspec==2025.7.0",
    "fvcore==0.1.5.post20221221",
    "hf-xet==1.1.5",
    "hjson==3.1.0",
    "huggingface-hub==0.34.0",
    "idna==3.10",
    "imageio==2.37.0",
    "iopath==0.1.10",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "lit==18.1.8",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "ninja==1.11.1.4",
    "numpy==1.24.4",
    "nvidia-cublas-cu11==11.10.3.66; sys_platform != 'darwin'",
    "nvidia-cuda-cupti-cu11==11.7.101; sys_platform != 'darwin'",
    "nvidia-cuda-nvrtc-cu11==11.7.99; sys_platform != 'darwin'",
    "nvidia-cuda-runtime-cu11==11.7.99; sys_platform != 'darwin'",
    "nvidia-cudnn-cu11==8.5.0.96; sys_platform != 'darwin'",
    "nvidia-cufft-cu11==10.9.0.58; sys_platform != 'darwin'",
    "nvidia-curand-cu11==10.2.10.91; sys_platform != 'darwin'",
    "nvidia-cusolver-cu11==11.4.0.1; sys_platform != 'darwin'",
    "nvidia-cusparse-cu11==11.7.4.91; sys_platform != 'darwin'",
    "nvidia-ml-py==12.575.51; sys_platform != 'darwin'",
    "nvidia-nccl-cu11==2.14.3; sys_platform != 'darwin'",
    "nvidia-nvtx-cu11==11.7.91; sys_platform != 'darwin'",
    "openai>=1.97.1",
    "opencv-python==4.8.1.78",
    "orjson==3.11.0",
    "packaging==25.0",
    "pandas>=2.1.0",
    "parameterized==0.9.0",
    "peft==0.10.0",
    "pillow==11.3.0",
    "portalocker==3.2.0",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "py-cpuinfo==9.0.0",
    "pyarrow==10.0.1",
    "pycocoevalcap==1.2",
    "pycocotools==2.0.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pynvml==12.0.0",
    "python-dateutil==2.9.0.post0",
    "pytorchvideo==0.1.5",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "sentencepiece==0.1.99",
    "setuptools>=80.9.0",
    "shortuuid==1.0.13",
    "six==1.17.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tensorboardx==2.6.4",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "timm==0.9.12",
    "tokenizers==0.15.1",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "tqdm==4.67.1",
    "transformers==4.37.2",
    "triton==2.0.0; sys_platform != 'darwin'",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "yacs==0.1.8",
]
name = "pixsage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"


[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
