[project]
dependencies = [
    "accelerate==0.27.2",
    "aiofiles>=24.1.0",
    "bitsandbytes==0.42.0",
    "datasets>=2.16.1",
    "decord==0.6.0; sys_platform != 'darwin'",
    "deepspeed==0.13.5",
    "dotenv>=0.9.9",
    "einops-exts==0.0.4",
    "huggingface-hub>=0.34.0",
    "imageio==2.37.0",
    "numpy==1.26.4",
    "openai>=1.98.0",
    "opencv-python>=4.11.0.86",
    "orjson>=3.11.1",
    "peft==0.10.0",
    "pyarrow==10.0.1",
    "pycocoevalcap==1.2",
    "pyyaml==6.0.2",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "sentencepiece==0.1.99",
    "setuptools>=80.9.0",
    "shortuuid==1.0.13",
    "tensorboardx==2.6.4",
    "termcolor==3.1.0",
    "timm==0.9.12",
    "tokenizers==0.15.1",
    "torch==2.1.0",
    "tqdm>=4.67.1",
    "transformers==4.37.2",
    "yacs==0.1.8",
]
name = "pixsage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"


[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
